--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -110,6 +110,7 @@ body {
       box-shadow: 4px 25px 25px 0px hsl(225, 100%, 94%);
       margin-bottom: 30px;
       font-size: 16px;
+      transition: 0.5s;
 
       &:hover {
          background-color: #c97bef;
@@ -121,6 +122,7 @@ body {
       color: $Desaturated-blue;
       font-weight: 700;
       font-size: 16px;
+      transition: 0.5s;
 
       &:hover {
          color: $dark-blue;
@@ -165,6 +167,7 @@ body {
       width: 100%;
       text-align: end;
       font-weight: 700;
+      transition: 0.5s;
 
       &:hover {
          text-decoration: none;
