--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,8 @@ body {
   box-shadow: 4px 25px 25px 0px #e0e8ff;
   margin-bottom: 30px;
   font-size: 16px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .card__proceed:hover {
   background-color: #c97bef;
@@ -111,6 +113,8 @@ body {
   color: #7280a7;
   font-weight: 700;
   font-size: 16px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .card__cancel:hover {
   color: #1f2f56;
@@ -156,6 +160,8 @@ body {
   width: 100%;
   text-align: end;
   font-weight: 700;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .current__btn:hover {
   text-decoration: none;
