--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -15,7 +15,7 @@ a {
 }
 
 html {
-   font-size: 16px;
+   font-size: 0.97vw;
 }
 
 $pale-blue: hsl(225, 100%, 94%);
@@ -28,7 +28,7 @@ $Family:'Red Hat Display',
 sans-serif;
 
 body {
-
+   font-family: $Family;
    padding: 10px;
    width: 100vw;
    height: 100vh;
@@ -106,12 +106,12 @@ body {
 
 
    &__proceed {
-      display: inline-block;
+
       margin: 1.6rem 3.2rem;
 
-      padding: 1rem 4rem;
+      padding: 1rem 0;
       white-space: nowrap;
-
+      width: 100%;
       text-align: center;
       background-color: $bright-blue;
       border-radius: 15px;
@@ -125,7 +125,20 @@ body {
       transition: 0.5s;
 
       &:hover {
-         background-color: #c97bef;
+         background-color: hsl(265, 100%, 53%);
+         transform: translateY(-0.25em);
+      }
+   }
+
+   @keyframes slidein {
+      from {
+         margin-left: 100%;
+         width: 300%;
+      }
+
+      to {
+         margin-left: 0%;
+         width: 100%;
       }
    }
 
@@ -138,6 +151,7 @@ body {
 
       &:hover {
          color: $dark-blue;
+         transform: translateY(-0.25em);
       }
    }
 }
@@ -183,7 +197,7 @@ body {
 
       &:hover {
          text-decoration: none;
-         color: #c97bef;
+         color: hsl(265, 100%, 53%);
       }
 
    }
@@ -206,7 +220,28 @@ body {
    color: hsl(228, 45%, 44%);
 }
 
-@media (max-width: 490px) {
+@media (max-width: 1160px) {
+   html {
+      font-size: 1.20vw;
+   }
+}
+
+@media (max-width: 1000px) {
+   html {
+      font-size: 1.4vw;
+   }
+}
+
+@media (max-width: 820px) {
+   html {
+      font-size: 1.71vw;
+   }
+}
+
+@media (max-width: 590px) {
+   html {
+      font-size: 2.37vw;
+   }
 
 
    .card {
@@ -245,34 +280,42 @@ body {
 
 }
 
-@media (max-width: 400px) {
-   .card-plan {
-      flex-direction: row;
-      padding: 10px;
-
-      &__img {
-         display: none;
-      }
-
-
-      &__current {
-         margin-bottom: 1rem;
-      }
+@media (max-width: 420px) {
+   html {
+      font-size: 3.33vw;
    }
 
-   .current__btn {
-      text-align: center;
-   }
+   // .card-plan {
+   //    flex-direction: row;
+   //    padding: 10px;
 
-   .card__plan {
-      flex-wrap: wrap;
-      justify-content: center;
-      text-align: center;
-   }
+   //    &__img {
+   //       display: none;
+   //    }
+
+
+   //    &__current {
+   //       margin-bottom: 1rem;
+   //    }
+   // }
+
+   // .current__btn {
+   //    text-align: center;
+   // }
+
+   // .card__plan {
+   //    flex-wrap: wrap;
+   //    justify-content: center;
+   //    text-align: center;
+   // }
 }
 
 
 @media (max-width: 375px) {
+   html {
+      font-size: 3.73vw;
+   }
+
    body {
       background: url('../../images/pattern-background-mobile.svg') no-repeat center top fixed $pale-blue;
    }
