--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@ a {
 }
 
 html {
-  font-size: 16px;
+  font-size: 0.97vw;
 }
 
 body {
+  font-family: "Red Hat Display", sans-serif;
   padding: 10px;
   width: 100vw;
   height: 100vh;
@@ -108,10 +109,10 @@ body {
           align-items: center;
 }
 .card__proceed {
-  display: inline-block;
   margin: 1.6rem 3.2rem;
-  padding: 1rem 4rem;
+  padding: 1rem 0;
   white-space: nowrap;
+  width: 100%;
   text-align: center;
   background-color: #3829e0;
   border-radius: 15px;
@@ -125,7 +126,29 @@ body {
   transition: 0.5s;
 }
 .card__proceed:hover {
-  background-color: #c97bef;
+  background-color: #730fff;
+  -webkit-transform: translateY(-0.25em);
+          transform: translateY(-0.25em);
+}
+@-webkit-keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 .card__cancel {
   margin-bottom: 50px;
@@ -137,6 +160,8 @@ body {
 }
 .card__cancel:hover {
   color: #1f2f56;
+  -webkit-transform: translateY(-0.25em);
+          transform: translateY(-0.25em);
 }
 
 .card-plan__img {
@@ -185,7 +210,7 @@ body {
 }
 .current__btn:hover {
   text-decoration: none;
-  color: #c97bef;
+  color: #730fff;
 }
 
 .attribution {
@@ -203,7 +228,26 @@ body {
   color: #3e52a3;
 }
 
-@media (max-width: 490px) {
+@media (max-width: 1160px) {
+  html {
+    font-size: 1.2vw;
+  }
+}
+@media (max-width: 1000px) {
+  html {
+    font-size: 1.4vw;
+  }
+}
+@media (max-width: 820px) {
+  html {
+    font-size: 1.71vw;
+  }
+}
+@media (max-width: 590px) {
+  html {
+    font-size: 2.37vw;
+  }
+
   .card {
     margin: 1rem;
     width: 90vw;
@@ -225,35 +269,16 @@ body {
     padding: 0 1.5rem;
   }
 }
-@media (max-width: 400px) {
-  .card-plan {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    padding: 10px;
-  }
-  .card-plan__img {
-    display: none;
-  }
-  .card-plan__current {
-    margin-bottom: 1rem;
-  }
-
-  .current__btn {
-    text-align: center;
-  }
-
-  .card__plan {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
+@media (max-width: 420px) {
+  html {
+    font-size: 3.33vw;
   }
 }
 @media (max-width: 375px) {
+  html {
+    font-size: 3.73vw;
+  }
+
   body {
     background: url("../../images/pattern-background-mobile.svg") no-repeat center top fixed #e0e8ff;
   }
